@@ -3,6 +3,10 @@
 	* src/save.c (save_linetype):  Save and show commands were failing to
 	list linecolor for lines that were originally specified as "lt -1".
 
+	* src/graphics.c (plot_border draw_polar_circle) src/set.c src/show.c:
+	New command "set border polar" draws a circle with radius matching the
+	highest tic position on the r axis.
+
 2017-01-17  Ethan A Merritt  <merritt@u.washington.edu>
 
 	* src/graphics.c:  Wrap polar grid radial lines in terminal notification
